[tool.poetry]
name = "pytune-configuration"
version = "2.0.3"
description = "Configuration and service utilities for PyTune platform"
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pytune_configuration" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
redis = "^5.0.7"
asyncpg = "^0.30.0"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"   # <-- roue binaire, conseillée sous Windows

# -- DEV --
simple-logger = { path = "../../packages/simple_logger", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.6.8"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
