[project]
name = "pytune_configuration"
version = "2.0.3"
description = "Configuration utilities for PyTune platform"
requires-python = ">=3.12,<3.13"

dependencies = [
    "redis>=5.0",
    "asyncpg>=0.30",
    "toml>=0.10",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "simple_logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytune_configuration"]